...
            "state" : "translated",
            "value" : "请先打开媒体，再保存截图"
          }
        }
      }
    },
    "Open Recent" : {
      "extractionState" : "stale",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "打开最近项目"
...
            "state" : "translated",
            "value" : "在新窗口打开 URL…"
          }
        }
      }
    },
    "Open URL…" : {
      "extractionState" : "stale",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "打开 URL…"
...
            "state" : "translated",
            "value" : "打开视频"
          }
        }
      }
    },
    "Open…" : {
      "extractionState" : "stale",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "打开…"
...
